implementation/boolean/target/debug/build/rayon-00d4637c6268b526/stderr
error[E0658]: const generics are unstable
 --> <anon>:1:41
  |
1 | pub fn probe() { let _ = { fn foo<const N: usize>() {} }; }
  |                                         ^
  |
  = note: see issue #74878 <https://github.com/rust-lang/rust/issues/74878> for more information

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
